[package]
name = "pico_gpio"
description = "PicoGPIO is a tool to turn a raspberry pi pico into a decently powerful GPIO port"
repository = "https://github.com/tudbut/pico_gpio"
license = "MIT"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
readformat = "0.1.2"
serialport = "4.3.0"
